added headder to the home and contact page

--- a/about.html
+++ b/about.html
@@ -11,6 +11,9 @@
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem quisquam, cum neque veniam amet nesciunt, labore
         unde libero ab molestias sapiente accusamus magnam quod deleniti. Recusandae accusantium suscipit voluptatem
         ipsa.</p>
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur enim, repellat laboriosam iure temporibus sint
+        earum obcaecati nisi sunt deserunt totam aut cumque ratione distinctio! Autem architecto dignissimos excepturi
+        dolores!</h1>
 
 </body>
 
