--- a/home.html
+++ b/home.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
-
+    <h1>this is the first paragaraph</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex ducimus magnam sapiente minima non itaque eos
+        facilis tempore unde maxime deserunt consectetur, doloremque iste sit dolore accusamus eveniet? Consequuntur, a!
+    </p>
 </body>
 
 </html>
