Commit message for partial changes

--- a/home.html
+++ b/home.html
@@ -12,6 +12,9 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex ducimus magnam sapiente minima non itaque eos
         facilis tempore unde maxime deserunt consectetur, doloremque iste sit dolore accusamus eveniet? Consequuntur, a!
     </p>
+    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit culpa delectus nihil, ex fugit tempore natus
+        mollitia quibusdam, error ipsam consequuntur eum amet ea, accusamus asperiores. Quas repellendus ad incidunt?
+    </h2>
 </body>
 
 </html>
